Squeak/Grammar/SqueakSpeakParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SqueakSpeak.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class SqueakSpeakParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, STRING=41, ID=42, FLOAT=43, NUMBER=44, WS=45, LINE_COMMENT=46, 
		BLOCK_COMMENT=47;
	public const int
		RULE_program = 0, RULE_adorableStatement = 1, RULE_extraStatement = 2, 
		RULE_nativeCall = 3, RULE_squeakNetGet = 4, RULE_squeakIn = 5, RULE_squeakMathCall = 6, 
		RULE_squeakOut = 7, RULE_hugThis = 8, RULE_snugLoop = 9, RULE_fluffMagic = 10, 
		RULE_snuggleIf = 11, RULE_snipChoose = 12, RULE_snipCase = 13, RULE_snipDefault = 14, 
		RULE_bringWarmth = 15, RULE_invokeWhimsy = 16, RULE_purrMath = 17, RULE_leftExpr = 18, 
		RULE_objectCreation = 19, RULE_fieldAssignment = 20, RULE_returnStatement = 21, 
		RULE_purrOperation = 22, RULE_purrOperator = 23, RULE_fieldAccess = 24, 
		RULE_purrTerm = 25, RULE_nativeCallExpr = 26, RULE_baseTerm = 27, RULE_arrayLiteral = 28, 
		RULE_condition = 29, RULE_paramList = 30, RULE_param = 31;
	public static readonly string[] ruleNames = {
		"program", "adorableStatement", "extraStatement", "nativeCall", "squeakNetGet", 
		"squeakIn", "squeakMathCall", "squeakOut", "hugThis", "snugLoop", "fluffMagic", 
		"snuggleIf", "snipChoose", "snipCase", "snipDefault", "bringWarmth", "invokeWhimsy", 
		"purrMath", "leftExpr", "objectCreation", "fieldAssignment", "returnStatement", 
		"purrOperation", "purrOperator", "fieldAccess", "purrTerm", "nativeCallExpr", 
		"baseTerm", "arrayLiteral", "condition", "paramList", "param"
	};

	private static readonly string[] _LiteralNames = {
		null, "'NativeCall'", "'('", "')'", "'->'", "';'", "'BeepBoop'", "'Listen'", 
		"'Brain'", "','", "'Squeak'", "'Cuddle'", "'='", "'Nuzzle'", "'{'", "'}'", 
		"'FluffMagic'", "'Peek'", "'Purr'", "'SnipChoose'", "'SnipCase'", "':'", 
		"'SnipDefault'", "'BringWarmth'", "'['", "']'", "'SnuggleObject'", "'PawReturn'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'NativeFunc'", "'=='", "'!='", 
		"'<'", "'>'", "'<='", "'>='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "STRING", "ID", "FLOAT", "NUMBER", "WS", 
		"LINE_COMMENT", "BLOCK_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SqueakSpeak.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SqueakSpeakParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SqueakSpeakParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SqueakSpeakParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SqueakSpeakParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AdorableStatementContext[] adorableStatement() {
			return GetRuleContexts<AdorableStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AdorableStatementContext adorableStatement(int i) {
			return GetRuleContext<AdorableStatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqueakSpeakVisitor<TResult> typedVisitor = visitor as ISqueakSpeakVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4398256958914L) != 0)) {
				{
				{
				State = 64;
				adorableStatement();
				}
				}
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 70;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AdorableStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SqueakOutContext squeakOut() {
			return GetRuleContext<SqueakOutContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HugThisContext hugThis() {
			return GetRuleContext<HugThisContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SnugLoopContext snugLoop() {
			return GetRuleContext<SnugLoopContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FluffMagicContext fluffMagic() {
			return GetRuleContext<FluffMagicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SnuggleIfContext snuggleIf() {
			return GetRuleContext<SnuggleIfContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PurrMathContext purrMath() {
			return GetRuleContext<PurrMathContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SnipChooseContext snipChoose() {
			return GetRuleContext<SnipChooseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BringWarmthContext bringWarmth() {
			return GetRuleContext<BringWarmthContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InvokeWhimsyContext invokeWhimsy() {
			return GetRuleContext<InvokeWhimsyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SqueakNetGetContext squeakNetGet() {
			return GetRuleContext<SqueakNetGetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SqueakInContext squeakIn() {
			return GetRuleContext<SqueakInContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SqueakMathCallContext squeakMathCall() {
			return GetRuleContext<SqueakMathCallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NativeCallContext nativeCall() {
			return GetRuleContext<NativeCallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectCreationContext objectCreation() {
			return GetRuleContext<ObjectCreationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FieldAssignmentContext fieldAssignment() {
			return GetRuleContext<FieldAssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		public AdorableStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_adorableStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.EnterAdorableStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.ExitAdorableStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqueakSpeakVisitor<TResult> typedVisitor = visitor as ISqueakSpeakVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAdorableStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AdorableStatementContext adorableStatement() {
		AdorableStatementContext _localctx = new AdorableStatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_adorableStatement);
		try {
			State = 88;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 72;
				squeakOut();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 73;
				hugThis();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 74;
				snugLoop();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 75;
				fluffMagic();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 76;
				snuggleIf();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 77;
				purrMath();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 78;
				snipChoose();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 79;
				bringWarmth();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 80;
				invokeWhimsy();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 81;
				squeakNetGet();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 82;
				squeakIn();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 83;
				squeakMathCall();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 84;
				nativeCall();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 85;
				objectCreation();
				}
				break;
			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 86;
				fieldAssignment();
				}
				break;
			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 87;
				returnStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExtraStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SqueakNetGetContext squeakNetGet() {
			return GetRuleContext<SqueakNetGetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SqueakInContext squeakIn() {
			return GetRuleContext<SqueakInContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SqueakMathCallContext squeakMathCall() {
			return GetRuleContext<SqueakMathCallContext>(0);
		}
		public ExtraStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_extraStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.EnterExtraStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.ExitExtraStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqueakSpeakVisitor<TResult> typedVisitor = visitor as ISqueakSpeakVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExtraStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExtraStatementContext extraStatement() {
		ExtraStatementContext _localctx = new ExtraStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_extraStatement);
		try {
			State = 93;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__5:
				EnterOuterAlt(_localctx, 1);
				{
				State = 90;
				squeakNetGet();
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 2);
				{
				State = 91;
				squeakIn();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 3);
				{
				State = 92;
				squeakMathCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NativeCallContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(SqueakSpeakParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(SqueakSpeakParser.STRING, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamListContext paramList() {
			return GetRuleContext<ParamListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(SqueakSpeakParser.ID, 0); }
		public NativeCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nativeCall; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.EnterNativeCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.ExitNativeCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqueakSpeakVisitor<TResult> typedVisitor = visitor as ISqueakSpeakVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNativeCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NativeCallContext nativeCall() {
		NativeCallContext _localctx = new NativeCallContext(Context, State);
		EnterRule(_localctx, 6, RULE_nativeCall);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			Match(T__0);
			State = 96;
			Match(STRING);
			State = 97;
			Match(STRING);
			State = 98;
			Match(T__1);
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33002545479684L) != 0)) {
				{
				State = 99;
				paramList();
				}
			}

			State = 102;
			Match(T__2);
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 103;
				Match(T__3);
				State = 104;
				Match(ID);
				}
			}

			State = 107;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SqueakNetGetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PurrOperationContext purrOperation() {
			return GetRuleContext<PurrOperationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(SqueakSpeakParser.ID, 0); }
		public SqueakNetGetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_squeakNetGet; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.EnterSqueakNetGet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.ExitSqueakNetGet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqueakSpeakVisitor<TResult> typedVisitor = visitor as ISqueakSpeakVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSqueakNetGet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SqueakNetGetContext squeakNetGet() {
		SqueakNetGetContext _localctx = new SqueakNetGetContext(Context, State);
		EnterRule(_localctx, 8, RULE_squeakNetGet);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(T__5);
			State = 110;
			Match(T__1);
			State = 111;
			purrOperation();
			State = 112;
			Match(T__2);
			State = 113;
			Match(T__3);
			State = 114;
			Match(ID);
			State = 115;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SqueakInContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(SqueakSpeakParser.ID, 0); }
		public SqueakInContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_squeakIn; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.EnterSqueakIn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.ExitSqueakIn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqueakSpeakVisitor<TResult> typedVisitor = visitor as ISqueakSpeakVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSqueakIn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SqueakInContext squeakIn() {
		SqueakInContext _localctx = new SqueakInContext(Context, State);
		EnterRule(_localctx, 10, RULE_squeakIn);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			Match(T__6);
			State = 118;
			Match(T__1);
			State = 119;
			Match(ID);
			State = 120;
			Match(T__2);
			State = 121;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SqueakMathCallContext : ParserRuleContext {
		public IToken mathFunc;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(SqueakSpeakParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(SqueakSpeakParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PurrOperationContext[] purrOperation() {
			return GetRuleContexts<PurrOperationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PurrOperationContext purrOperation(int i) {
			return GetRuleContext<PurrOperationContext>(i);
		}
		public SqueakMathCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_squeakMathCall; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.EnterSqueakMathCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISqueakSpeakListener typedListener = listener as ISqueakSpeakListener;
			if (typedListener != null) typedListener.ExitSqueakMathCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISqueakSpeakVisitor<TResult> typedVisitor = visitor as ISqueakSpeakVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSqueakMathCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SqueakMathCallContext squeakMathCall() {
		SqueakMathCallContext _localctx = new SqueakMathCallContext(Context, State);
		EnterRule(_localctx, 12, RULE_squeakMathCall);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			Match(T__7);
			State = 124;
			Match(T__1);
			State = 125;
			_localctx.mathFunc = Match(ID);
			State = 132;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__8) {
				{
				State = 126;
				Match(T__8);
				State = 127;
				purrOperation();
				State = 130;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__8) {
					{
					State = 128;
					Match(T__8);
					State = 129;
					purrOperation();
					}
				}

				}
			}

			State = 134;
			Match(T__2);
			State = 135;
			Match(T__3);
			State = 137;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 136;
				Match(ID);
				}
			}

			State = 139;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
